# stateElectionMap

./: .TODO.md.swp  .gitignore  LICENSE  README.md  TODO.md
min_votes_to_change_result/: Cargo.toml
min_votes_to_change_result/src/: main.rs
public/: asset-manifest.json  data  index.html  manifest.json  precache-manifest.f43524941dd2ec9a5274dc0b5c45cfd0.js  service-worker.js  static
stateElectionMap/: .gitignore  HOWTO  package-lock.json  package.json  replaceSsiTags.js  tsconfig.json
stateElectionMap/config/: webpack.config.prod.js
stateElectionMap/public/: index.html
stateElectionMap/public/data/: min_votes_to_change_result.json
stateElectionMap/public/data/electionResults/: 1972.csv  1976.csv  1980.csv  1984.csv  1988.csv  1992.csv  1996.csv  2000.csv  2004.csv  2008.csv  2012.csv  2016.csv  2020.csv  2024.csv
stateElectionMap/public/data/electoralVotes/: 1971.csv  1981.csv  1991.csv  2001.csv  2011.csv  2021.csv
stateElectionMap/src/: App.css  App.js  App.jsx  App.test.tsx  App.tsx  DataHandling.js  DataHandling.test.tsx  DataHandling.tsx  MapDateSlider.tsx  StateMap.css  StateMap.js  StateMap.jsx  StateMap.tsx  index.js  polylabel.min.js
stateElectionMap/webpack/: webpack.config.js
