[package]
name = "min_votes_to_change_result"
version = "0.1.0"
authors = ["gregstoll <greg@gregstoll.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.5"
serde = { version = "1.0.118", features = ["derive"] }
